# opscore

./: .gitignore  LICENSE  OPSCORE.ps1  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: bootstrap-final.yml  bootstrap.yml  ci.yml
bootstrap/: part-00.b64  part-01.b64  part-02.b64  part-03.b64  part-04.b64  part-05.b64
docs/: api.md  architecture.md  backup-awareness.md  ci-baseline-verification.md  collectors.md  connectivity.md  evidence-imports.md  incident-history.md  roadmap.md  safety-boundaries.md  watch-handoff.md
docs/releases/: v0.9.0.md
samples/imports/: dns-audit-sample.csv  watch-handoff-v1.json  watch-run-sample.json
samples/incidents/: orders-service-unavailable.json
scripts/: browser-smoke.py  export-review.ps1  github-workflow.ps1  run-correlation.ps1  run-demo.ps1  run-ui.ps1  setup.ps1  verify.ps1
src/opscore/: analysis.py  api.py  assessment.py  assessment_ui.py  backup_awareness.py  cli.py  collectors.py  connectivity.py  demo.py  history.py  imports.py  layout_finish.py  models.py  operational_ui.py  professional_finish.py  reports.py  storage.py  ui.py  ux_compatibility.py  ux_polish.py  visual_refresh.py  watch_handoff.py
src/opscore/adapters/: __init__.py  dns_audit.py  watch_run.py
tests/: test_analysis.py  test_api.py  test_assessment.py  test_assessment_ui.py  test_backup_awareness.py  test_collectors.py  test_connectivity.py  test_core.py  test_history_api.py  test_history_cli.py  test_history_m9.py  test_incident_history.py  test_professional_ux.py  test_storage.py  test_visual_refresh.py  test_watch_handoff.py
