[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opscore"
version = "0.3.0"
description = "Local-first infrastructure and production incident evidence workbench"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Rafael Alba"}]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
opscore = "opscore.cli:app"
opscore-api = "opscore.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opscore"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=opscore --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["opscore"]
